Fix some layout issues

--- a/Open Judge System/Web/OJS.Web/Content/Site.css
+++ b/Open Judge System/Web/OJS.Web/Content/Site.css
@@ -224,6 +224,7 @@ input[type="checkbox"].input-validation-error {
 
 .contest {
     padding: 15px;
+    min-height: 100px;
 }
 .contest:hover {
     background-color: #D5D5D8;
